@@ -918,6 +918,8 @@ bool IYinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
 template <class G_t, class I_t>
 bool DEinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
 {
+  const iCode *ic = G[i].ic;
+
   if(!IS_GB) // Only gbz80 might need de for code generation.
     return(true);
 
@@ -929,7 +931,19 @@ bool DEinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
   if(unused_E && unused_D)
     return(true);	// Register DE not in use.
 
-  return(false);
+  if(ic->op == CALL || ic->op == PCALL)
+    return(false);
+
+  if(ic->op == '=' || ic->op == GET_VALUE_AT_ADDRESS || ic->op == CAST)
+    return(false);
+
+  if(ic->op == UNARYMINUS || ic->op == '+' || ic->op == '-' || ic->op == '*')
+    return(false);
+
+  if(ic->op == '>' || ic->op == '<')
+    return(false);
+
+  return(true);
 }
 
 template <class G_t, class I_t>
